# darknet_wrapper

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
benchmark/: CMakeLists.txt
benchmark/src/: benchmark.cpp
include/darknet_core/: YoloObjectDetector.h  image_interface.h
include/darknet_core/common/: bounding_boxes.h  dynamic_params.h  params.h
include/darknet_wrapper/: YoloObjectDetector.h
include/darknet_wrapper/common/: bounding_boxes.h  dynamic_params.h  params.h
params/: default.yaml
src/: YoloObjectDetector.cpp  image_interface.c
src/common/: dynamic_params.cpp
tests/: CMakeLists.txt
tests/param/: test_params.yaml
tests/src/: detection_test.cpp  parameters_test.cpp
yolo_network_config/labels/: yolov2-tiny.yaml  yolov2-voc.yaml  yolov3-tiny.yaml
